# Teoshold-1000

./: .gitignore  App.jsx  CONTRIBUTING.md  Cargo.toml  LICENSE  PROJECT_STRUCTURE.md  README.md  index.html  lib.rs  pasted_content.txt  smart_contract_architecture.md  technical_specifications.md  todo.md
